--- a/TextileResearchDevelopment/Views/Dyeing/Index.cshtml
+++ b/TextileResearchDevelopment/Views/Dyeing/Index.cshtml
@@ -6,9 +6,11 @@
 }
 
 <head>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.css" rel="stylesheet" type="text/css" />
+    <script type="text/javascript" src="~/Scripts/bootstrap.js"></script>
     <script type="text/javascript" src="~/Scripts/bootstrap3-typeahead.min.js"></script>
-    <script type="text/javascript" src="~/Scripts/bootstrap-multiselect.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="~/Content/bootstrap-multiselect.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>
     <style>
         tfoot input {
             width: 100%;
@@ -31,7 +33,7 @@
     <input type="checkbox" id="hidden" value="option1" style="display:none;">
 
     <div class="text-left">
-        <button href="" id="FabricSelection" class="btn-info sm-4" data-toggle="modal" data-target="#modalFabricSelection">
+        <button href="" id="FabricSelection" class="btn-info sm-4">
             Select Fabric
         </button>
     </div>
@@ -226,30 +228,35 @@
                     <div class="form-group col-xs-4 form-inline">
                         <label for="RFTType" class="control-label" style="width:35%;">RFT</label>
                         <div style="display: inline;">
-                            <select name="RFTType" id="RFTType" style="width:60%;" class="form-control input-sm" required autofocus></select>
+                            <select name="RFTType" id="RFTType" style="width:60%;" class="form-control" required autofocus></select>
                         </div>
                     </div>
                 </div>
                 <div class=" form-group">
                     <div class="form-group col-xs-4 form-inline">
-                        <label for="DyeingDate" class="control-label" style="width:35%;">D. Date</label>
-                        <div class='input-group date' id='DyeingDate' style="display: inline;">
-                            <input type='text' class="form-control" />
-                            <span class="input-group-addon">
-                                <span class="glyphicon glyphicon-calendar"></span>
-                            </span>
+                        <label for="datepicker" class="control-label" style="width:35%;">D. Date</label>
+                        <div id="datepicker" class="input-group date" style="width:60%;" data-date-format="dd/mm/yyyy">
+                            <input class="form-control" type="text" style="display:inline;" readonly />
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                         </div>
+
+                        @*<div class='input-group date' id='DyeingDate' style="display: inline;">
+                                <input type='text' class="form-control" style="width:50%;" />
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-calendar" style="width:10%;"></span>
+                                </span>
+                            </div>*@
                     </div>
                     <div class="form-group col-xs-4 form-inline">
                         <label for="PH" class="control-label" style="width:35%;">DyeBath</label>
                         <div style="display: inline;">
-                            <select name="PH" id="PH" style="width:60%;" class="form-control input-sm" placeholder="DyeBath PH" required autofocus></select>
+                            <input type="text" class=" form-control" style="width:60%;" id="PH" required autofocus>
                         </div>
                     </div>
                     <div class="form-group col-xs-4 form-inline">
                         <label for="Value" class="control-label" style="width:35%;">Whiteness Val</label>
                         <div style="display: inline;">
-                            <select name="Value" id="Value" style="width:60%;" class="form-control input-sm" placeholder="Whiteness Value" required autofocus></select>
+                            <input type="text" class=" form-control" style="width:60%;" id="Value" required autofocus>
                         </div>
                     </div>
                 </div>
@@ -356,7 +363,12 @@
         var selectedFabricRowId = 0;
         var fabricSelectionTable = $('#fabricSelectionTable').DataTable();
 
-        $('#DyeingDate').datetimepicker();
+        //$('#DyeingDate').datetimepicker();
+
+        $("#datepicker").datepicker({
+            autoclose: true,
+            todayHighlight: true
+        }).datepicker('update', new Date());
 
         (function ($, window) {
 
@@ -510,10 +522,7 @@
             dom: 'Bfrtip',
             buttons: [
                 {
-                    extend: 'excelHtml5',
-                    exportOptions: {
-                        columns: ':visible'
-                    }
+                    extend: 'excelHtml5'
                 },
 
                 'colvis'
@@ -697,12 +706,13 @@
                     fb: fb,
                     cm: cm,
                     OrderNo: $("#OrderNoSL").val().length > 0 ? $("#OrderNoSL").val().toString() : '',
-                    RefNo: $("#RefNoSL").val().length > 0 ? $("#ColorSL").val().toString() : ''
+                    RefNo: $("#RefNoSL").val().length > 0 ? $("#ColorSL").val().toString() : '',
+                    Note : "Dyeing"
                 };
 
                 $.ajax({
                     type: "POST",
-                    url: "/Dyeing/FabricSearch",
+                    url: "/Fabric/FabricSearch",
                     contentType: "application/json; charset=utf-8",
                     dataType: "json",
                     data: JSON.stringify(fabricSearchObj),
@@ -730,7 +740,7 @@
 
         $("#FabricSelection").click(function () {
             event.preventDefault();
-
+            $("#modalFabricSelection").modal('show');
             selectedFabricRowId = 0; ResetFabric(); fabricSelectionTable.clear().draw();
 
             loadBuyerList();
@@ -804,7 +814,7 @@
 
         $('#DyeingForm').submit(function (e) {
             event.preventDefault();
-
+            debugger
             var fabric = {
                 Id: selectedFabricRowId,
                 BarCode: $("#BarCode").val()
@@ -833,7 +843,7 @@
                     Recipe: $("#Recipe").val(),
                     Comments: $("#Comments ").val(),
                     Time: $("#Time").val(),
-                    DyeingDate: $("#DyeingDate").val(),
+                    DyeingDate: $("#datepicker").val(),
                     PH: $("#PH").val(),
                     Value: $("#Value").val()
                 };
@@ -899,7 +909,7 @@
                     Recipe: $("#Recipe").val(),
                     Comments: $("#Comments ").val(),
                     Time: $("#Time").val(),
-                    DyeingDate: $("#DyeingDate").val(),
+                    DyeingDate: $("#datepicker").val(),
                     PH: $("#PH").val(),
                     Value: $("#Value").val()
                 };
@@ -967,7 +977,7 @@
                     Recipe: $("#Recipe").val(),
                     Comments: $("#Comments ").val(),
                     Time: $("#Time").val(),
-                    DyeingDate: $("#DyeingDate").val(),
+                    DyeingDate: $("#datepicker").val(),
                     PH: $("#PH").val(),
                     Value: $("#Value").val()
                 };
